Updates on summary & accounts

--- a/app/agent/homeScreen/summary.html
+++ b/app/agent/homeScreen/summary.html
@@ -1,12 +1,45 @@
 <div ng-controller="AgentHomeScreenSummaryController">
-    <div class="panel panel-primary">
+    <div class="panel panel-primary summry-wrap">
         <div class="panel-heading text-center">
             <h4 class="panel-title">{{'Monthly Performance'|translate}}</h4>
         </div>
 
         <form novalidate role="form" name="editForm" ng-submit="refresh()">
             <div class="row" ng-if="view.summaryList.length<=1">
-                <div class="col-sm-12">
+                <div class="col-sm-4 date-bx">
+                    <div class="date-icon-bx" ng-click="startDate.opened=true"><img src="../../../images/icon-calender.png" /></div>
+                    <div class="date-input-bx"><div class="dib-txt">{{'Start Date'|translate}}</div><input name="startDate" type="text" uib-datepicker-popup ng-model="view.startDate" is-open="startDate.opened" datepicker-options="dateOptions" ng-required="true" /></div>
+                </div>
+                <div class="col-sm-4 date-bx">
+                    <div class="date-icon-bx" ng-click="endDate.opened=true"><img src="../../../images/icon-calender.png" /></div>
+                    <div class="date-input-bx"><div class="dib-txt">{{'End Date'|translate}}</div><input name="endDate" type="text"  uib-datepicker-popup ng-model="view.endDate" is-open="endDate.opened" datepicker-options="dateOptions" ng-required="true" /></div>
+                </div>
+                <div class="col-sm-4 date-bx">
+                    <div class="date-icon-bx"><img src="../../../images/icon-rebate.png" /></div>
+                    <div class="date-input-bx"><div class="dib-txt">{{'Rebate'|translate}}</div><input type="text" class="summary-input" value="{{view.rebate|number:2}}" ng-disabled="true"></div>
+                </div>
+                <div class="clearfix"></div>
+                <div ng-repeat="summary in view.summaryList">
+                    <div class="col-sm-5 usd-bx-wrap">
+                        <div class="usd-bx">
+                            <div class="usd-sign"><div class="big-sign"><img src="../../../images/icon-usd.png" /></div>USD</div>
+                            <div class="usd-balance"><div class="big-numbers"><input type="text" class="summary-input" value="{{summary.netDeposit|number:2}}" ng-disabled="true"></div>{{'Balance'|translate}}</div>
+                        </div>
+                    </div>
+                    <div class="col-sm-5 usd-bx-wrap">
+                        <div class="usd-bx equity-bx">
+                            <div class="usd-sign"><div class="big-sign"><img src="../../../images/icon-usd.png" /></div>USD</div>
+                            <div class="usd-balance"><div class="big-numbers"><input type="text" class="summary-input" value="{{summary.volume|number:2}}" ng-disabled="true"></div>{{'Equity'|translate}}</div>
+                        </div>
+                    </div>
+                    <div class="col-sm-2 usd-bx-wrap">
+                        <button class="btn-blank" type="submit" ng-disabled="editForm.$invalid">
+                            <img src="../../../images/icon-refresh.png" />
+                        </button>                        
+                    </div>
+                </div>
+                <div class="col-sm-12 data-blnk" ng-if="!view.summaryList.length">{{'Data is not available.'|translate}}</div>
+                <!--<div class="col-sm-12">
                     <table class="table table-striped table-responsive">
                         <thead>
                         <tr>
@@ -70,7 +103,7 @@
                         </td>
                         </tfoot>
                     </table>
-                </div>
+                </div>-->
             </div>
 
             <div class="row" ng-if="view.summaryList.length && view.summaryList.length>1">
