--- a/app/agent/management/accounts.html
+++ b/app/agent/management/accounts.html
@@ -1,36 +1,31 @@
 <div ng-controller="AgentAccountSummaryController">
-    <div class="panel panel-info">
-        <div class="panel-heading text-center"><strong class="heading">{{'Client Accounts'|translate}}</strong></div>
+    <div class="panel panel-info caccounts">
+        <div class="panel-heading text-center">
+            <h4 class="panel-title">{{'Client Accounts'|translate}}</h4>
+        </div>
 
         <div class="panel-body">
             <form novalidate role="form" name="editForm" ng-submit="search(true)">
                 <div class="row">
-                    <div class="col-sm-6">
-                        <div class="row form-group">
-                            <div class="col-sm-12">
-                                <label class="control-label" for="agent">{{"IB"|translate}}</label>
-                            </div>
-                            <div class="col-sm-12">
-                                <select id="agent" name="agent" class="form-control" ng-model="searchParams.workGroup"
-                                        ng-options="option.name for option in workGroups|orderBy: 'name'">
-                                    <option value="">{{'All'|translate}}</option>
-                                </select>
-                            </div>
-                        </div>
+                    <div class="col-lg-5 col-md-4 col-sm-4 cpadd-1">
+                        <select id="agent" name="agent" class="form-control" ng-model="searchParams.workGroup"
+                                ng-options="option.name for option in workGroups|orderBy: 'name'">
+                            <option value="">{{'IB'|translate}}</option>
+                            <option value="">{{'All'|translate}}</option>
+                        </select>
                     </div>
 
-                    <div class="col-sm-6">
-                        <div class="row form-group">
-                            <div class="col-sm-12">
-                                <label class="control-label" for="login">{{"Login"|translate}}</label>
-                            </div>
-                            <div class="col-sm-12">
-                                <input id="login" name="login" class="form-control" ng-model="searchParams.login" only-digits ng-trim="true">
-                            </div>
-                        </div>
+                    <div class="col-lg-5 col-md-4 col-sm-4 cpadd-2">
+                        <input id="login" name="login" class="form-control" ng-model="searchParams.login" only-digits ng-trim="true" placeholder="Login" type="text">                        
+                    </div>
+
+                    <div class="col-lg-2 col-md-4 col-sm-4 cpadd-3">
+                        <button class="cbtn-search  " type="submit" ng-disabled="editForm.$invalid">
+                                <i class="fa fa-search" aria-hidden="true"></i> {{'Search'|translate}}
+                        </button>
                     </div>
                 </div>
-
+                <!--
                 <div class="row">
                     <div class="col-sm-6">
                         <div class="row form-group">
@@ -44,41 +39,30 @@
                         </div>
                     </div>
                 </div>
-
-                <div class="row">
-                    <div class="col-sm-12">
-                        <button class="btn btn-primary" type="submit" ng-disabled="editForm.$invalid">
-                            <i class="fa fa-search" aria-hidden="true"></i> {{'Search'|translate}}
-                        </button>
-                    </div>
-                </div>
+                -->                
             </form>
         </div>
 
-        <div class="panel-body row">
-            <div class="col-sm-12" ng-if="accounts.length && summaryList.length">
-                <table class="table table-bordered table-responsive">
-                    <thead>
-                    <tr class="success">
-                        <th>{{'Currency'}}</th>
-                        <th>{{'Balance'}}</th>
-                        <th>{{'Equity'}}</th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <tr ng-repeat="summary in summaryList">
-                        <th>
-                            <span ng-show="summary.currency">{{summary.currency}}</span>
-                            <span ng-show="!summary.currency">({{'Unknown'|translate}})</span>
-                        </th>
-                        <td>{{summary.balance|number:2}}</td>
-                        <td>{{summary.equity|number:2}}</td>
-                    </tr>
-                    </tbody>
-                </table>
+        <div class="panel-body caccounts-second row">            
+            <div ng-if="accounts.length && summaryList.length">
+                <div ng-repeat="summary in summaryList">
+                    <div class="col-sm-4 date-bx">
+                        <div class="date-icon-bx"><img src="../../../images/icon-dollar-circle.png" /></div>
+                        <div class="date-input-bx"><div class="dib-txt">{{'Currency'}}</div><span class="cacc-num" ng-show="summary.currency">{{summary.currency}}</span><span ng-show="!summary.currency">({{'Unknown'|translate}})</span></div>
+                    </div>
+                    <div class="col-sm-4 date-bx">
+                        <div class="date-icon-bx"><img src="../../../images/icon-balance.png" /></div>
+                        <div class="date-input-bx"><div class="dib-txt">{{'Balance'}}</div><div class="cacc-num">{{summary.balance|number:2}}</div></div>
+                    </div>
+                    <div class="col-sm-4 date-bx">
+                        <div class="date-icon-bx"><img src="../../../images/icon-equity.png" /></div>
+                        <div class="date-input-bx"><div class="dib-txt">{{'Equity'}}</div><div class="cacc-num">{{summary.equity|number:2}}</div></div>
+                    </div>
+                    <div class="clearfix"></div>
+                </div>                
             </div>
 
-            <div class="col-sm-12" ng-show="pageParams.totalItems>pageParams.itemsPerPage">
+            <div ng-show="pageParams.totalItems>pageParams.itemsPerPage">
                 <ul uib-pagination total-items="pageParams.totalItems" ng-model="pageParams.currentPage"
                     items-per-page="pageParams.itemsPerPage" max-size="pageParams.maxSize"
                     class="pagination-sm" boundary-links="true" ng-change="pageChanged()"
@@ -86,37 +70,38 @@
                 </ul>
             </div>
 
-            <div class="col-sm-12">
+            <div class="tbl-wrap">
                 <table class="table table-striped table-hover table-responsive">
-                    <thead>
-                    <tr>
-                        <th><a href="" ng-click="predicate='login'; reverse=!reverse">{{'Login'|translate}}</a></th>
-                        <th class="col-sm-3"><a href="" ng-click="predicate='name'; reverse=!reverse">{{'Name'|translate}}</a></th>
-                        <th><a href="" ng-click="predicate='leverage'; reverse=!reverse">{{'Leverage'|translate}}</a></th>
-                        <th><a href="" ng-click="predicate='equity'; reverse=!reverse">{{'Equity'|translate}}</a></th>
-                        <th><a href="" ng-click="predicate='marginLevel'; reverse=!reverse">{{'Margin Level'|translate}}</a></th>
-                        <th><a href="" ng-click="predicate='workGroup.name'; reverse=!reverse">{{'IB'|translate}}</a></th>
-                    </tr>
-                    </thead>
-                    <tbody ng-init="predicate='login'">
-                    <tr ng-repeat="account in entities">
-                        <td>{{account.login}}</td>
-                        <td><a ng-href="#!/user/client/{{account.client.id}}/home">{{account.name}}</a></td>
-                        <td>{{account.leverage|number}}</td>
-                        <td>{{account.equity|number:2}}</td>
-                        <td>{{account.marginLevel|number:2}}<span ng-show="account.marginLevel">%</span></td>
-                        <td>{{account.workGroup.name}}</td>
-                    </tr>
-                    </tbody>
-                    <tfoot ng-if="accounts && !accounts.length">
-                    <td colspan="6" class="text-center text-muted">
-                        {{'Data is not available.'|translate}}
-                    </td>
-                    </tfoot>
-                </table>
+                <thead>
+                <tr>
+                    <th><a href="" ng-click="predicate='login'; reverse=!reverse">{{'Login'|translate}}</a></th>
+                    <th class="col-sm-3"><a href="" ng-click="predicate='name'; reverse=!reverse">{{'Name'|translate}}</a></th>
+                    <th><a href="" ng-click="predicate='leverage'; reverse=!reverse">{{'Leverage'|translate}}</a></th>
+                    <th><a href="" ng-click="predicate='equity'; reverse=!reverse">{{'Equity'|translate}}</a></th>
+                    <th><a href="" ng-click="predicate='marginLevel'; reverse=!reverse">{{'Margin Level'|translate}}</a></th>
+                    <th><a href="" ng-click="predicate='workGroup.name'; reverse=!reverse">{{'IB'|translate}}</a></th>
+                </tr>
+                </thead>
+                <tbody ng-init="predicate='login'">
+                <tr ng-repeat="account in entities">
+                    <td>{{account.login}}</td>
+                    <td><a ng-href="#!/user/client/{{account.client.id}}/home">{{account.name}}</a></td>
+                    <td>{{account.leverage|number}}</td>
+                    <td>{{account.equity|number:2}}</td>
+                    <td>{{account.marginLevel|number:2}}<span ng-show="account.marginLevel">%</span></td>
+                    <td>{{account.workGroup.name}}</td>
+                </tr>
+                </tbody>
+                <tfoot ng-if="accounts && !accounts.length">
+                <td colspan="6" class="text-center text-muted">
+                    {{'Data is not available.'|translate}}
+                </td>
+                </tfoot>
+            </table>
             </div>
+            
 
-            <div class="col-sm-12" ng-show="pageParams.totalItems>pageParams.itemsPerPage">
+            <div ng-show="pageParams.totalItems>pageParams.itemsPerPage">
                 <ul uib-pagination total-items="pageParams.totalItems" ng-model="pageParams.currentPage"
                     items-per-page="pageParams.itemsPerPage" max-size="pageParams.maxSize"
                     class="pagination-sm" boundary-links="true" ng-change="pageChanged()"
