--- a/app/agent/report/agent-cash-activity-report.html
+++ b/app/agent/report/agent-cash-activity-report.html
@@ -60,11 +60,11 @@
                 <table class="table table-bordered table-responsive">
                     <thead>
                     <tr class="success">
-                        <th>{{'Currency'}}</th>
-                        <th>{{'Volume'}}</th>
-                        <th>{{'Deposit'}}</th>
-                        <th>{{'Withdrawal'}}</th>
-                        <th>{{'Net Deposit'}}</th>
+                        <th>{{'Currency'|translate}}</th>
+                        <th>{{'Volume'|translate}}</th>
+                        <th>{{'Deposit'|translate}}</th>
+                        <th>{{'Withdrawal'|translate}}</th>
+                        <th>{{'Net Deposit'|translate}}</th>
                     </tr>
                     </thead>
                     <tbody>
