--- a/app/user/admin/user-work-group-permission.html
+++ b/app/user/admin/user-work-group-permission.html
@@ -15,7 +15,7 @@
         </td>
     </tr>
     </tbody>
-    <tfoot ng-show="!user.workGroups.length">
+    <tfoot ng-show="workGroups.length">
     <tr>
         <td>
             <select class="form-control"
