--- a/app/agent/management/ib-accounts.html
+++ b/app/agent/management/ib-accounts.html
@@ -25,8 +25,7 @@
                         <th><a href="" ng-click="predicate='name'; reverse=!reverse">{{'Name'|translate}}</a></th>
                         <th>{{'Phone'|translate}}</th>
                         <th colspan="2">{{'Email'|translate}}</th>
-                        <th><span ng-show="extendedView">{{'Category'|translate}}</span></th>
-                        <th><span ng-show="extendedView">{{'Level'|translate}}</span></th>
+                        <th>{{'Category'|translate}}</th>
                         <th>{{'Link'|translate}}</th>
                     </tr>
                     </thead>
@@ -40,45 +39,65 @@
                         <td>{{account.name}}</td>
                         <td>{{account.phone}}</td>
                         <td colspan="2">{{account.email}}</td>
-                        <td>
-                            <span ng-show="extendedView">{{account.category}}</span>
-                        </td>
-                        <td>
-                            <span ng-show="extendedView">{{account.level}}</span>
-                        </td>
+                        <td>{{account.category}}</td>
                         <td>
                             <a class="clickable" ng-click="openLink(account)"><i class="fa fa-link" aria-hidden="true"></i></a>
                             <a class="clickable" ng-click="copyLink(account)"><i class="fa fa-clipboard" aria-hidden="true"></i></a>
                         </td>
                     </tr>
                     <tr ng-if="account.expand">
-                        <th></th>
+                        <th colspan="2"></th>
                         <th>{{'Country'|translate}}</th>
                         <th>{{'State/Province'|translate}}</th>
                         <th>{{'City'|translate}}</th>
-                        <th colspan="5"></th>
+                        <th colspan="3"></th>
                     </tr>
                     <tr ng-if="account.expand">
-                        <td></td>
+                        <td colspan="2"></td>
                         <td>{{account.account.country}}</td>
                         <td>{{account.account.state}}</td>
                         <td>{{account.account.city}}</td>
-                        <td colspan="5"></td>
+                        <td colspan="3"></td>
                     </tr>
                     <tr ng-if="account.expand && account.workGroup.notes">
                         <td></td>
-                        <td colspan="8">
+                        <td colspan="7">
                             <pre class="pre-text">{{account.workGroup.notes}}</pre>
                         </td>
                     </tr>
-                    <tr ng-if="account.expand && account.accounts && account.accounts.length">
+                    <tr ng-repeat-start="ac in account.allSubAccounts" ng-if="account.expand && account.allSubAccounts && account.allSubAccounts.length">
                         <td></td>
-                        <td colspan="8">
-                            <div ng-repeat="ac in account.accounts|orderBy:['account.login']"
-                                 ng-include="'accountTree'" ng-init="entity=ac;level=0">
-                            </div>
+                        <td>[{{ac.level}}] {{ac.account.login}}</td>
+                        <td>{{ac.name}}</td>
+                        <td>{{ac.phone}}</td>
+                        <td colspan="2">{{ac.email}}</td>
+                        <td>{{ac.category}}</td>
+                        <td>
+                            <a class="clickable" ng-click="openLink(ac)"><i class="fa fa-link" aria-hidden="true"></i></a>
+                            <a class="clickable" ng-click="copyLink(ac)"><i class="fa fa-clipboard" aria-hidden="true"></i></a>
                         </td>
                     </tr>
+                    <tr ng-if="account.expand && account.allSubAccounts && account.allSubAccounts.length && ac.level<2">
+                        <th colspan="2"></th>
+                        <th>{{'Country'|translate}}</th>
+                        <th>{{'State/Province'|translate}}</th>
+                        <th>{{'City'|translate}}</th>
+                        <th colspan="3"></th>
+                    </tr>
+                    <tr ng-if="account.expand && account.allSubAccounts && account.allSubAccounts.length && ac.level<2">
+                        <td colspan="2"></td>
+                        <td>{{ac.account.country}}</td>
+                        <td>{{ac.account.state}}</td>
+                        <td>{{ac.account.city}}</td>
+                        <td colspan="3"></td>
+                    </tr>
+                    <tr ng-if="account.expand && account.workGroup.notes">
+                        <td></td>
+                        <td colspan="7">
+                            <pre class="pre-text">{{account.workGroup.notes}}</pre>
+                        </td>
+                    </tr>
+                    <tr ng-repeat-end ng-if="false"></tr>
                     <tr ng-repeat-end ng-if="false"></tr>
                     </tbody>
                     <tfoot ng-if="accounts && !accounts.length">
@@ -99,13 +118,3 @@
         </div>
     </div>
 </div>
-
-<script type="text/ng-template" id="accountTree">
-    <p style="text-indent:{{level*15}}px">
-        <span style="text-indent: 0">&#8226; {{entity.account.login}} - {{entity.name}}</span>
-    </p>
-
-    <span ng-repeat="ac in entity.accounts|orderBy:['account.login']"
-          ng-include="'accountTree'" ng-init="entity=ac;level=level+1">
-    </span>
-</script>
