--- a/app/client/fund/withdrawal.html
+++ b/app/client/fund/withdrawal.html
@@ -3,6 +3,7 @@
         <div class="panel-heading text-center">
             <strong class="heading">{{"Withdrawal"|translate}}</strong>
         </div>
+
         <div class="panel-body">
             <form novalidate role="form" name="editForm" ng-submit="save()">
                 <div class="row form-group">
@@ -66,8 +67,8 @@
                             <label class="control-label" for="amount">{{"Amount"|translate}}*</label>
                         </div>
                         <div class="col-sm-5">
-                            <input id="amount" name="amount" type="number" class="form-control" ng-model="entity.amount"
-                                   only-digits required>
+                            <input id="amount" name="amount" type="number" class="form-control" ng-model="entity.amount" float
+                                   required>
                         </div>
                     </div>
 
@@ -78,8 +79,7 @@
                         </div>
                         <div class="col-sm-5">
                             <select id="currency" name="currency" class="form-control" ng-model="entity.currencyType"
-                                    required
-                                    ng-options="option.label as option.label for option in view.currencyTypes">
+                                    required ng-options="option.label as option.label for option in view.currencyTypes">
                             </select>
                             <span class="help-block">{{'In which currency you want to receive your fund.'|translate}}</span>
                         </div>
@@ -96,6 +96,28 @@
                     </div>
                 </div>
             </form>
+        </div>
+
+        <div class="panel-body" ng-show="view.historyViewList.length">
+            <h4 class="text-center">{{'Recent Withdrawal History'|translate}}</h4>
+            <table class="table table-striped table-hover table-responsive">
+                <thead>
+                <tr>
+                    <th>{{'Account'|translate}}</th>
+                    <th>{{'Amount'|translate}}</th>
+                    <th>{{'Date'|translate}}</th>
+                    <th>{{'Status'|translate}}</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr ng-repeat="item in view.historyViewList">
+                    <td>{{item.withdrawProfile.login}}</td>
+                    <td>{{item.withdrawProfile.amount}}</td>
+                    <td>{{item.created|formattedTime}}</td>
+                    <td>{{item.jobStatus}}</td>
+                </tr>
+                </tbody>
+            </table>
         </div>
     </div>
 </div>
