--- a/app/user/admin/login/client-login-admin.html
+++ b/app/user/admin/login/client-login-admin.html
@@ -1,7 +1,7 @@
 <div ng-controller="ClientLoginProducerController">
     <div class="row form-group">
         <div class="col-sm-12">
-            <label>{{'Generate Logins'|translate}}</label>
+            <label>{{'Reset All Client Logins Password'|translate}}</label>
         </div>
         <div class="col-sm-4">
             <button class="btn btn-primary" ng-click="process()">
