--- a/app/admin/domain-summary.html
+++ b/app/admin/domain-summary.html
@@ -4,9 +4,9 @@
         <table class="table table-striped table-hover table-responsive">
             <thead>
             <tr>
-                <th class="col-sm-5">Name</th>
-                <th class="col-sm-4">Created</th>
-                <th>Active Users</th>
+                <th class="col-sm-5">{{'Name'|translate}}</th>
+                <th class="col-sm-4">{{'Created'|translate}}</th>
+                <th>{{'Active Users'|translate}}</th>
             </tr>
             </thead>
             <tbody>
