--- a/app/user/admin/user-basic.html
+++ b/app/user/admin/user-basic.html
@@ -3,7 +3,27 @@
         <label class="control-label" for="email">{{"Email"|translate}}*</label>
     </div>
     <div class="col-sm-4">
-        <input id="email" name="email" class="form-control" type="email" ng-model="user.email" ng-trim="true" required/>
+        <input id="email" name="email" class="form-control" type="email" ng-model="user.email" ng-trim="true" required ng-blur="validateEmail(user.email)"/>
+        <span class="text-warning" ng-if="emailView.taken">{{'Email already exists.'|translate}} <span ng-show="emailView.user">[{{emailView.user.label}}]</span></span>
+    </div>
+</div>
+
+<div class="row form-group" ng-if="emailView.taken && emailView.allowOverride"
+     ng-class="{'has-error': editForm.override.$invalid && editForm.override.$dirty}">
+    <div class="col-sm-2">
+        <label class="control-label" for="override">{{"Override"|translate}}*</label>
+    </div>
+    <div class="col-sm-4">
+        <div name="override" id="override" class="btn-group">
+            <button type="button" class="btn btn-primary" ng-model="user.$override"
+                    uib-btn-radio="true">
+                {{"Yes"|translate}}
+            </button>
+            <button type="button" class="btn btn-primary" ng-model="user.$override"
+                    uib-btn-radio="false">
+                {{"No"|translate}}
+            </button>
+        </div>
     </div>
 </div>
 
