--- a/app/agent/homeScreen/summary.html
+++ b/app/agent/homeScreen/summary.html
@@ -22,14 +22,14 @@
                 <div ng-repeat="summary in view.summaryList">
                     <div class="col-sm-5 usd-bx-wrap">
                         <div class="usd-bx">
-                            <div class="usd-sign"><div class="big-sign"><img src="../../../images/icon-usd.png" /></div>USD</div>
-                            <div class="usd-balance"><div class="big-numbers"><input type="text" class="summary-input" value="{{summary.netDeposit|number:2}}" ng-disabled="true"></div>{{'Balance'|translate}}</div>
+                            <div class="usd-sign"><div class="big-sign"><img src="../../../images/icon-usd.png" /></div>{{summary.currency}}</div>
+                            <div class="usd-balance"><div class="big-numbers"><input type="text" class="summary-input" value="{{summary.netDeposit|number:2}}" ng-disabled="true"></div>{{'Net Deposit'|translate}}</div>
                         </div>
                     </div>
                     <div class="col-sm-5 usd-bx-wrap">
                         <div class="usd-bx equity-bx">
-                            <div class="usd-sign"><div class="big-sign"><img src="../../../images/icon-usd.png" /></div>USD</div>
-                            <div class="usd-balance"><div class="big-numbers"><input type="text" class="summary-input" value="{{summary.volume|number:2}}" ng-disabled="true"></div>{{'Equity'|translate}}</div>
+                            <div class="usd-sign"><div class="big-sign"><img src="../../../images/icon-usd.png" /></div>{{'Volume'|translate}}</div>
+                            <div class="usd-balance"><div class="big-numbers"><input type="text" class="summary-input" value="{{summary.volume|number:2}}" ng-disabled="true"></div>{{'lots'|translate}}</div>
                         </div>
                     </div>
                     <div class="col-sm-2 usd-bx-wrap">
