--- a/app/agent/management/accounts.html
+++ b/app/agent/management/accounts.html
@@ -16,7 +16,7 @@
                     </div>
 
                     <div class="col-lg-5 col-md-4 col-sm-4 cpadd-2">
-                        <input id="login" name="login" class="form-control" ng-model="searchParams.login" only-digits ng-trim="true" placeholder="Login" type="text">
+                        <input id="login" name="login" class="form-control" ng-model="searchParams.term" ng-trim="true" placeholder="Login, Email..." type="text">
                     </div>
 
                     <div class="col-lg-2 col-md-4 col-sm-4 cpadd-3">
