--- a/app/agent/homeScreen/summary.html
+++ b/app/agent/homeScreen/summary.html
@@ -29,7 +29,7 @@
                     <div class="col-sm-5 usd-bx-wrap">
                         <div class="usd-bx equity-bx">
                             <div class="usd-sign"><div class="big-sign"><img src="../../../images/icon-usd.png" /></div>{{'Volume'|translate}}</div>
-                            <div class="usd-balance"><div class="big-numbers"><input type="text" class="summary-input" value="{{summary.volume|number:2}}" ng-disabled="true"></div>{{'lots'|translate}}</div>
+                            <div class="usd-balance"><div class="big-numbers"><input type="text" class="summary-input" value="{{summary.volume|number:2}}" ng-disabled="true"></div>{{'Lots'|translate}}</div>
                         </div>
                     </div>
                     <div class="col-sm-2 usd-bx-wrap">
