--- a/app/user/follow-ups.html
+++ b/app/user/follow-ups.html
@@ -1,6 +1,6 @@
 <div class="panel panel-info">
-    <div class="panel-heading text-center">
-        <strong class="heading">{{"Follow Ups"|translate}}</strong>
+    <div class="panel-heading ">
+        <h4 class="heading">{{"Follow Ups"|translate}}</h4>
     </div>
 </div>
 
