--- a/app/broker/jobs.html
+++ b/app/broker/jobs.html
@@ -1,6 +1,6 @@
 <div class="panel panel-info">
     <div class="panel-heading text-center">
-        <strong class="heading">{{"Jobs"|translate}}</strong>
+        <h4 class="heading">{{"Jobs"|translate}}</h4>
     </div>
 </div>
 
