--- a/app/broker/tasks.html
+++ b/app/broker/tasks.html
@@ -1,6 +1,6 @@
 <div class="panel panel-info">
-    <div class="panel-heading text-center">
-        <strong class="heading">{{"Tasks"|translate}}</strong>
+    <div class="panel-heading ">
+        <h4 class="heading">{{"Tasks"|translate}}</h4>
     </div>
 </div>
 
