--- a/app/client/client-list.html
+++ b/app/client/client-list.html
@@ -1,7 +1,7 @@
 <div ng-controller="ClientListController">
     <div class="panel panel-info">
-        <div class="panel-heading text-center">
-            <strong class="heading">{{"Client List"|translate}}</strong>
+        <div class="panel-heading ">
+            <h4 class="heading">{{"Client List"|translate}}</h4>
         </div>
 
         <div class="panel-body">
