--- a/app/broker/management/trading-activities.html
+++ b/app/broker/management/trading-activities.html
@@ -1,7 +1,7 @@
 <div ng-controller="TradingActivityController">
     <div class="panel panel-info">
-        <div class="panel-heading text-center">
-            <strong class="heading">{{"Trading Activities"|translate}}</strong>
+        <div class="panel-heading">
+            <h4 class="heading">{{"Trading Activities"|translate}}</h4>
         </div>
 
         <div class="panel-body">
